test/negative/rust_cargo_structured_conflict/Main.hx
@:rustCargo({name: "serde", version: "1"})
@:rustCargo({name: "serde", version: "2"})
class Main {
	static function main():Void {}
}
